css/styles.css
/* 
Project Name: Jennifer Nerad Portfolio
Author: Jennifer Nerad
*/

/*font-family: 'Merriweather', serif;
font-family: 'Merriweather Sans', sans-serif;
font-family: 'Codystar', cursive;
font-family: 'Lato', sans-serif;
*/
/******************************************
/* SETUP                   
/*******************************************/

/* Box Model Hack */
* {
     -moz-box-sizing: border-box; /* Firexfox */
     -webkit-box-sizing: border-box; /* Safari/Chrome/iOS/Android */
     box-sizing: border-box; /* IE */
}

/* Clear fix hack */
.clearfix:after {
     content: ".";
     display: block;
     clear: both;
     visibility: hidden;
     line-height: 0;
     height: 0;
}

.clear {
	clear: both;
}

.alignright {
	float: right; 
	padding: 0 0 10px 10px; /* note the padding around a right floated image */
}

.alignleft {
	float: left; 
	padding: 0 10px 10px 0; /* note the padding around a left floated image */
}

/*******************************************/

/*#container {
	width: 960px;
	margin: auto;
}*/

body{
    /*background-color: #363636;*/
    font-size: 100%;
		letter-spacing: .1em;
    line-height: 1.7em;
		font-family: 'Lato', sans-serif, Verdana; font-weight: 100;
}


/*** NAV ***/

#nav-wrapper {
	position: fixed;
	z-index: 99;
	top: 0px;
	left: 0px;
	right: 0px;
	width: 100%;
	background-color: rgba(30, 36, 63, .8);
	/*background-color: transparent;*/
	height: 60px;

}
nav {
/*	position: relative;
	top: 0;
	bottom: 0;*/
		font-size: 1em;
		vertical-align: baseline;
		position: relative;
		top: 3px;
		/*bottom: 0px;*/
}
nav li{
		display: inline;
		padding-right: 20px;
    font-weight: 300;
}
nav li:hover {
			font-weight: 400;
}
nav a, nav li {
	text-decoration: none;
	color: #fff;
}

.logo {
  padding: 8px;
}
/*** HEADER ***/
a {
  text-decoration: none;
  color: #333;
}
h1, h2, h3, h4, h5, h6, p {
		font-family: 'Lato', 'Verdana', sans-serif; font-weight: 300;
		color: #fff;
    text-align: center;
    padding: 10px;
    margin: 0;
}

header h1 {
	font-family: 'Lato', 'Verdana', sans-serif; font-weight: 100;
  font-size: 4em;
  line-height: .75em;
}

h2 {
  font-size: 1.5em;
}

header h2 {
	font-size: 1em;
  font-weight: 300;
  margin-top: 0px;
}

h3 {
  font-size: 1.5em;
  /*color: black;*/
  font-weight: 100;
    -webkit-margin-before: 0em;
    -webkit-margin-after: 0em;
    -webkit-margin-start: 0px;
    -webkit-margin-end: 0px;
}

h4 {
  line-height: 1em;
}

h5, h6 {
  font-size: 1em;
  letter-spacing: .1em;
  font-style: italic;
  line-height: 1em;
}

h6 {
  font-size: .6em;
}

p {
  margin-left: 30px;
  margin-right: 30px;
  color: black;
}

/*** ANIMATION ***/

.hide{
    /*so each letter isn't visible on load*/
    visibility: hidden;
    opacity: 0.0;
} 
h1 span{
    transition: 1s ease;
}


/*** CONTENT ***/

.main {
  background: url('../images/IV8A0901.jpg');
  background-size: 100%;
  background-repeat: no-repeat;
  /*background-position: 50% 50%; */
  margin-top: -40px;
	height: 700px;  
	/* lt ie8 */
  -ms-background-position-x: center;
  -ms-background-position-y: bottom;
  background-position: center bottom;
  /* scale bg image proportionately */
  background-size: cover;   
  /* ie8 workaround - http://louisremi.github.io/background-size-polyfill/ */
  -ms-behavior: url(/backgroundsize.min.htc);
  /* prevent scaling past src width (or not) */
  /* max-width: 1200px; */
}

.absolute { /*this is formula for centering*/
	text-align: center;
	margin: auto;
	position: absolute;
	top:0;
	bottom: 0;
	left: 0;
	right: 0;
}

.outer {
	position: relative;
	width: 100%;
	display: table;
  text-align: center;
}

.inner {
	display: table-cell;
	vertical-align: middle;
}

.twoUp {
	display: table-cell;
  width: 50%;
  height: 400px;
}

.twoUp img {
  max-height: 200px;
  margin: 10px;

}

.threeUp {
	width: 33.33%;
	background-color: #777;
  height: 300px;
  display: table-cell;

}
.photolink { /*photo sections will use background images*/
  /*width: 100%;*/
  height: 400px;
  background-repeat: cover;
  background-position: 50% 50%;

  /* lt ie8 */
  -ms-background-position-x: center;
  -ms-background-position-y: center;
  background-position: center center;
  /* scale bg image proportionately */
  background-size: cover;   
  /* ie8 workaround - http://louisremi.github.io/background-size-polyfill/ */
  -ms-behavior: url(/backgroundsize.min.htc);
  /* prevent scaling past src width (or not) */
  /* max-width: 1200px; */
}

.portraits {
  background: url('../images/20110903_1-3.jpg');
  background-position: 50% 40%;
    background-size: cover;
}

.farmFood {
  background: url('../images/20111106_22.jpg');
  background-size: cover;
}

.oliveHarvest {
  background: url('../images/oliveharvest.jpg');
  background-size: cover;
    background-position: 70% 40%;
}

.artistSpaces {
  background: url('../images/ArtistSpaces.jpg');
  background-size: cover;
  background-position: 70% 40%;
}

.felting {
  background: url('../images/felting.jpg');
  background-size: cover;
  background-position: 80% 40%;
}

.BBPhoto {
  background: #222;
}

.BPickles {
  background-color: #111;
}

.bio {
  background-color: #ddd;
  color: black;
  height: 400px;
}

.divider {
  background-color: #1E243F;
  color: white;
  padding: 17px 0px;
  position: relative;
  vertical-align: middle;
}

/*** FOOTER ***/

footer{
	height: 90px;
	text-align: center;
	overflow: hidden;
	/*padding: 16px 0;*/
	/*padding: 1.6rem 0;*/
	margin-bottom: 0px;
	/*padding-top: 20px;*/
	background-color: white;
	color: black;
}
footer ul {
	padding: 0px 5px;
  margin: 10px 0px 0px;
}
footer li {
	display: inline;
  padding: 0px 10px; 
  /*padding between list items*/
}

footer h6 {
  color: black;
}

/*** SMALL ***/

@media (max-width: 700px) {
      .main {
				height: 500px;  
			}	
			body{
		    font-size: 75%;
			}
      #nav-wrapper {
      		height: 45px;
      }

      .logo {
        padding: 0px 5px;
      }

      .photolink {
        max-width: 100%;
      }

      .twoUp {
        height: 220px;
        width: 100%;
        display: block;
      }

      .threeUp {
        height: 220px;
        width: 100%;
        display: block;
      }

      .twoUp img {
        max-height: 100px;    
      }

      footer {
      	height: 85px;
      }

      footer li {
      	padding: 0px 5px;
      }

      footer img {
      	height: 35px;
      	width: 35px;
      }

